--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,19 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+* {
+	box-sizing: border-box;
+	break-inside: avoid-column;
+   }
 
-body {
-	font-family: 'Droid Serif', serif;
-	font-size: 14px;
-	color: #2f2f2f;
-	background-color: #f9f7f1;
-}
+   body {
+	font-family: sans-serif;
+	font-size: 80%;
+	background: #ccc;
+	line-height: 1.2;
+	margin: 4em;
+	
+   }
 header {
 	font-family: 'Playfair Display', serif;
 	font-weight: 900;
@@ -67,12 +73,20 @@ p {
 	display: inline-block;
 	margin: 30px 2% 0 2%;
 	border-bottom: #2f2f2f;
+	display: grid;
+  grid-template-columns: 1fr 18rem;
+  grid-template-rows: auto 1fr;
+  align-items: start;
+  gap: 1rem;
 }
 .collumns {
 	color: darkblue;
 	display: grid;
 
 }
+.collumns > article:nth-child(2) {
+	grid-row: 1 / -1;
+   }
 
 .collumn {
 	font-size: 11px;
@@ -84,6 +98,7 @@ p {
 	margin-bottom: 50px;
 	transition: all 0.7s;
 	border-bottom: 1px;
+	
 	
 }
 .collumn + .collumn {
@@ -257,6 +272,8 @@ p {
 }
 Row {
 	flex-direction: row;
+	grid-area: bottom; 
+	align-self: start;
 }
 /*________________________________________________________________________________________________________________________________*/
 /*MEDIAQUERIES*/
