--- a/src/App.css
+++ b/src/App.css
@@ -78,12 +78,19 @@ p {
   grid-template-columns: 1fr 18rem;
   grid-template-rows: auto 1fr;
 justify-items: center;
+flex-wrap: wrap;
+margin: auto;
 
   gap: 1rem;
 }
 .collumns {
 	color: darkblue;
 	display: grid;
+	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	align-self: flex-end;
+
 	
 
 
@@ -99,6 +106,11 @@ justify-items: center;
 	margin-bottom: 50px;
 	transition: all 0.7s;
 	border-bottom: 1px;
+	object-fit:contain;
+	border: #2f2f2f;
+	position: relative;
+	
+
 
 	
 }
@@ -233,8 +245,8 @@ justify-items: center;
 } */
 .collumn .citation {
 	font-family: 'Playfair Display', serif;
-	font-size: 36px;
-	line-height: 44px;
+	font-size: 26px;
+	line-height: 34px;
 	/*font-style: italic;*/
 	text-align: center;
 	font-weight: 400;
@@ -258,6 +270,7 @@ justify-items: center;
 	display: block;
 	margin: 0 auto;
 }
+
 .collumn .figure {
 	margin: 0 0 20px;
 }
@@ -275,6 +288,7 @@ Row {
 	flex-direction: row;
 	grid-area: bottom; 
 	align-self: start;
+	object-fit:contain;
 }
 /*________________________________________________________________________________________________________________________________*/
 /*MEDIAQUERIES*/
@@ -308,7 +322,20 @@ Row {
 		overflow: hidden;
 	}
 }
+.index {
+     display: flex;
+    
+     flex-direction: row;
+     width: 80%;
+     list-style: none;
+  box-shadow: var(--pink)12px 12px 12px 10px ;
 
+}
+.div {
+     display: flex;
+   }
 
-
-
+   .div > * {
+     flex: 0 auto;
+   }
+   
