--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: left;
   contain: fit;
+  padding: 3px;
+  margin: 3px;
 }
 
 
@@ -109,6 +111,7 @@ margin: auto;
 	object-fit:contain;
 	border: #2f2f2f;
 	position: relative;
+	padding: 6px;;
 	
 
 
@@ -313,7 +316,7 @@ Row {
 	}
 	.collumn + .collumn {
 		border-left: 6pc;
-		border-bottom: 1px solid #2f2f2f;
+		border-bottom: 11px solid #2f2f2f;
 	}
 	header {
 		max-width: 320px;
@@ -338,4 +341,40 @@ Row {
    .div > * {
      flex: 0 auto;
    }
+   .showMore{
+	contain: fit;
+	
+   }
+   .read-more__button {
+	display: inline;
+	background-color: transparent;
+	outline: none;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	font-size: 12px;
+	cursor: pointer;
+	color: #007f8c;
+   }
+   
+   .read-more__button:hover {
+	text-decoration: underline;
+   }
+   
+   .read-more__text--hide {
+	max-height: 0;
+	font-size: 0;
+	opacity: 0;
+   }
+   
+   .read-more__text--show {
+	max-height: 10em;
+	opacity: 1;
+	font-size: inherit;
+   }
+   
+   .read-more__text--remaining {
+	transition: opacity 240ms ease;
+   }
+   
    
