Just spend some time with this app. There are 3 things that I'll add to my wish list. First, the edit button needs to work. I just can't remember how. I can always go back and copy fruits. Second, the buttons need repositioning. When read more is clicked, the expanded text overlap the buttons. Finally, I would like the image that is displayed on upload is way too big. Finally, for real this time, I would like the create new blahg entry to be a modal.

--- a/src/App.css
+++ b/src/App.css
@@ -279,5 +279,8 @@ Row {
    .read-more__text--remaining {
 	transition: opacity 240ms ease;
    }
+   button{
+	position: relative;
+   }
    
    
