--- a/src/components/PostList/PostList.module.scss
+++ b/src/components/PostList/PostList.module.scss
@@ -7,6 +7,6 @@
    flex-direction: column;
    margin: 10px;
   padding: 0;
-  background-color: #f5f8faAF;
+  background-color: rgb(247,245,238);
   border-radius: 20px;
 }
