--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
    body {
 	font-family: sans-serif;
 	font-size: 80%;
-	background: #ccc;
+	background: rgb(247, 245,238);
 	line-height: 1.2;
 	margin: 4em;
 	justify-items: center;
@@ -46,7 +46,7 @@ p {
 }
 
 .headerobjectswrapper {
-	color:aqua;
+	color:rgb(187,177,157);
 }
 
 .subhead {
@@ -82,7 +82,7 @@ margin: auto;
   gap: 1rem;
 }
 .collumns {
-	color: darkblue;
+	color: rbg(54,54,53);
 	display: grid;
 	align-items: center;
 	display: flex;
@@ -257,7 +257,7 @@ Row {
 	margin: 0;
 	font-size: 12px;
 	cursor: pointer;
-	color: #007f8c;
+	color: rgb(162,134,109);
    }
    
    .read-more__button:hover {
