changes to photo upload button.

--- a/src/App.css
+++ b/src/App.css
@@ -285,4 +285,11 @@ Row {
    select {
 	font-weight: 400;
    }
+   .button {
+	font-size: xxx-large;
+	border: none;
+  }
+  input {
+	margin: 0.09em;;
+  }
    
