--- a/src/App.css
+++ b/src/App.css
@@ -293,4 +293,10 @@ Row {
 	margin: 0.09em;
 	border: none;
   }
+/*  
+   .frame{
+	border-image: url('https://res.cloudinary.com/dqjhgnivi/image/upload/v1691956491/uzuhar6utvcnvnpdxgbh.png')  30 / 19px round;;
+
+   } */
+  
    
